<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/bottom_menu_news_string"
        android:id="@+id/nav_graph_news"
        android:icon="@drawable/ic_bottom_menu"
        app:showAsAction="always">
    </item>

    <item android:title="@string/bottom_menu_search_string"
        android:id="@+id/nav_graph_search"
        android:icon="@drawable/ic_bottom_menu_search"
        app:showAsAction="always">
    </item>

    <item android:title="@string/bottom_menu_help_string"
        android:id="@+id/helpFragment"
        app:showAsAction="always">
    </item>

    <item android:title="@string/bottom_menu_history_string"
        android:id="@+id/bottom_menu_history"
        android:icon="@drawable/ic_bottom_menu_history"
        app:showAsAction="always">
    </item>

    <item android:title="@string/bottom_menu_profile_string"
        android:id="@+id/nav_graph_profile"
        android:icon="@drawable/ic_bottom_menu_profile"
        app:showAsAction="always">
    </item>

</menu>